force-app/main/default/objects/ActiveCamp__Setup_Data_History__c/ActiveCamp__Setup_Data_History__c.object-meta.xml
<CustomObject>
    <label>Setup Data History</label>
    <nameField>
        <label>Setup Data History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Setup Data Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>