force-app/main/default/objects/ActiveCamp__Setup_Data_History__c/fields/ActiveCamp__Field_Name__c.field-meta.xml
<CustomField>
    <fullName>ActiveCamp__Field_Name__c</fullName>
    <label>Field Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>