force-app/main/default/objects/ActiveCamp__Setup_Data_History__c/fields/ActiveCamp__Old_Value__c.field-meta.xml
<CustomField>
    <fullName>ActiveCamp__Old_Value__c</fullName>
    <label>Old Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>